--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
     <title>Frontend Mentor | Blog preview card</title>
   </head>
   <body>
+    <main>
+      <div class="card">
+        <img src="assets/images/illustration-article.svg" alt="blog-image">
+        <div class="card__label">
+          <span>Learning</span>
+        </div>
+        <div class="card__date">Published 21 Dec 2023</div>
+        <h1 class="card__title">HTML & CSS foundations</h1>
+        <p class="card__description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <div class="avatar">
+          <img class="avatar__image" src="assets/images/image-avatar.webp" alt="avatar">
+          <span class="avatar__name">Greg Hooper</span>
+        </div>        
+      </div>
+    </main>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
