add styles and readme

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <body>
     <main>
       <div class="card">
-        <img src="assets/images/illustration-article.svg" alt="blog-image">
+        <img class="card__image" src="assets/images/illustration-article.svg" alt="blog-image">
         <div class="card__label">
-          <span>Learning</span>
+          <span class="text-preset3-bold">Learning</span>
         </div>
-        <div class="card__date">Published 21 Dec 2023</div>
-        <h1 class="card__title">HTML & CSS foundations</h1>
-        <p class="card__description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <div class="card__date text-preset3">Published 21 Dec 2023</div>
+        <h1 class="card__title text-preset1 ">HTML & CSS foundations</h1>
+        <p class="card__description text-preset2">These languages are the backbone of every website, defining structure, content, and presentation.</p>
         <div class="avatar">
           <img class="avatar__image" src="assets/images/image-avatar.webp" alt="avatar">
-          <span class="avatar__name">Greg Hooper</span>
+          <span class="avatar__name text-preset3-bold">Greg Hooper</span>
         </div>        
       </div>
     </main>
